# sorting

./: LICENSE  README.md  sorting.cabal
src/: Main.hs  Quicksort.hs
